# swanky_persist

./: Cargo.toml  README.md  docker-compose.yaml
derive_test/: Cargo.toml
derive_test/src/: lib.rs
src/: dao_error.rs  data_services.rs  data_services_config.rs  lib.rs  persistable.rs
src/cache/: mod.rs  redis_cache.rs
src/db/: mod.rs  mongo_db.rs
swanky_persist_cacheable/: Cargo.toml
swanky_persist_cacheable/src/: lib.rs
swanky_persist_derive_cache/: Cargo.toml
swanky_persist_derive_cache/src/: lib.rs
swanky_persist_derive_persist/: Cargo.toml
swanky_persist_derive_persist/src/: lib.rs
swanky_persist_persistable/: Cargo.toml
