[package]
name = "swanky_persist"
version = "0.1.0"
edition = "2021"
authors = ["David Skyberg<davidskyberg@gmail.com"]
description = "Simple cached persistence with MongoDB and Redis"
keywords = ["rust", "mongodb", "redis"]
license = "MIT OR Apache-2.0"
readme = "./README.md"
repository = "https://github.com/dskyberg/swanky_persist/"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
tokio-test = "0.4.3"

[dependencies]
mongodb = { version = "2.6", optional = true }
log = "0.4"
redis = { version = "0.23", features = [
    "tokio-comp",
    "connection-manager",
], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = "1.32"
futures = "0.3.28"
swanky_persist_cacheable = { path = "./swanky_persist_cacheable" }
swanky_persist_persistable = { path = "./swanky_persist_persistable" }
swanky_persist_derive_cache = { path = "./swanky_persist_derive_cache", optional = true }
swanky_persist_derive_persist = { path = "./swanky_persist_derive_persist", optional = true }

[features]
derive = ["swanky_persist_derive_cache", "swanky_persist_derive_persist"]
default = ["redis", "mongodb", "derive"]
