[package]
name = "swanky_persist_derive_persist"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.3"
proc-macro2 = "1.0.67"
quote = "1.0.33"
swanky_persist_persistable = { path = "../swanky_persist_persistable" }
syn = { version = "2.0.36", features = ["derive"] }
